more localization for anywhere report

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MobileReports/Views/Report/Index.cshtml
@@ -100,13 +100,13 @@
 			</li>
 			<li data-role="fieldcontain">
 				<fieldset data-role="controlgroup">
-					<legend>Type (loc)</legend>
+					<legend>@Resources.TypeLOC</legend>
 					<input type="checkbox" name="report-settings-type-graph" id="report-settings-type-graph" />
 					<label for="report-settings-type-graph">
-						Graph (loc)</label>
+						@Resources.GraphLOC</label>
 					<input type="checkbox" name="report-settings-type-table" id="report-settings-type-table" />
 					<label for="report-settings-type-table">
-						Table (loc)
+						@Resources.TableLOC
 					</label>
 				</fieldset>
 			</li>
